Fix spacing and sizing for tile details

--- a/src/components/sprite-selector-item/sprite-selector-item.css
+++ b/src/components/sprite-selector-item/sprite-selector-item.css
@@ -38,14 +38,16 @@
 }
 
 .sprite-info {
-    padding: 0.2rem 0.2rem 0.1rem ;
+    padding: 0.25rem;
     border-bottom-left-radius: 0.25rem;
     border-bottom-right-radius: 0.25rem;
 
     font-size: 0.625rem;
     color: $text-primary;
     user-select: none;
+}
 
+.sprite-name, .sprite-details {
     /*
         For truncating overflowing text gracefully
         Min-width is for a bug: https://css-tricks.com/flexbox-truncated-text
@@ -56,10 +58,16 @@
     min-width: 0;
 }
 
+.sprite-details {
+    margin-top: 0.125rem;
+    font-size: 0.5rem;
+}
+
 .is-selected .sprite-info {
     background: $motion-primary;
     color: $ui-white;
 }
+
 .delete-button {
     position: absolute;
     top: 0.125rem;
